<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_save_waypoint"
        android:title="@string/action_save_waypoint"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_waypoints"
        android:title="@string/action_waypoints"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_units"
        android:title="@string/action_units"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_privacy"
        android:title="@string/action_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
